# connected-components-3d

./: .dockerignore  .gitignore  .travis.yml  404.html  AUTHORS  CITATION.cff  ChangeLog  Dockerfile  MANIFEST.in  Makefile  README.md  appveyor.yml  automated_test.py  build_linux.sh  cc3d.cpp  cc3d.hpp  cc3d.pyx  cc3d_continuous.hpp  cc3d_graphs.hpp  cc3d_parallel.hpp  ccd3d_org.hpp  dataIO.py  index.html  libdivide.h  manylinux1.Dockerfile  manylinux2010.Dockerfile  manylinux2014.Dockerfile  mkdocs.yml  mypy.allowlist  ngl_viz.py  objects.inv  perf.py  playground.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  stdout_test.txt  (+4 more)
.github/workflows/: build_wheel.yml  docs.yml  lint.yml  tests.yml
benchmarks/: README.md  benchmarks.py  index.html
cc3d/: __init__.py  __init__.pyi  builtins.hpp  cc3d.hpp  cc3d_binary.hpp  cc3d_continuous.hpp  cc3d_graphs.hpp  fastcc3d.cpp  fastcc3d.pyi  fastcc3d.pyx  threadpool.hpp  types.py
cpp/: Makefile  cc3d.hpp  test.cpp
docs/: api.md  docs.css  index.md
docs/api/: index.html
manual_testing/: test.py
search/: search_index.json
src/cc3d/: __init__.py  fastcc3d.cpp  fastcc3d.pyi  fastcc3d.pyx
src/gpu/: cc3d.cu  cc3d.metal  cc3d.mm  cc3d_mps.cpp  cc3d_mps.pyx  cc3d_mps_impl.h  cc3d_mps_impl.m
