[metadata]
name = connected-components-3d
url = https://github.com/seung-lab/connected-components-3d/
summary = Connected components on 3D images, supports multiple labels. 
description-content-type = text/markdown
description-file = README.md
author = William Silversmith
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/connected-components-3d/
license = GPLv3+
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering  

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = cc3d
